syntax = "proto3";

option csharp_namespace = "ClassworkrGPC";

package greet;

service CustomerService {
    rpc GetCustomers(GetCustomersRequest) returns (GetCustomersResponse) {}
}

message GetCustomersRequest {
}

// base on Customer.cs
message GetCustomers{
  string customerID = 1;
  string CompanyName = 2;
  string ContactName = 3;
  string ContactTitle = 4;
  string Address = 5;
  string City = 6;
  string Region = 7;
  string PostalCode = 8;
  string Country = 9;
  string Phone = 10;
  string Fax = 11;
}

message GetCustomersResponse {
    repeated Customer customers = 1;
}